Comments on peak amplitudes

--- a/main.tex
+++ b/main.tex
@@ -131,7 +131,9 @@ The total output of observed tectal networks tended to be higher in response to 
 Selectivity analysis. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
 
-To quantify selectivity of individual tectal cells, we calculated Cohen’s $d$ effect size for each cell (the difference in means, divided by the pooled standard deviation), comparing cumulative responses to different stimuli. We considered two measures of selectivity: that for "looming over flash" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial organization of stimuli, as they had the same dynamics). On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), and there was no difference between stages ($p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivity values within each brain: while the variance did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones, reflecting a decrease in number of top-selective cells within each brain (Fig. 2I). A more intuitive way to quantify this difference is by looking at the gap between top-selective (90th percentile) and median selective cells, which went down in older animals (0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles; $p_t=$ 0.03). Together, these results were unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
+To quantify stimulus selectivity, for each tectal cell we calculated Cohen’s $d$ effect sizes between cumulative responses to different stimuli. We considered two measures of selectivity: that for "looming over flash" (a type of selectivity that may rely on both stimulus dynamics and its spatial organization), and "looming over scrambled" (that can only rely on spatial organization of stimuli, as they had the same dynamics). By looking at cumulative, rather than peak responses, we avoided making unjustifiable assumptions about the dynamics on interaction between tectal and hindbrain circuits \citep{peron2009adaptation,khakhalin2014}, even though this choice biased our analysis in favor of looming stimuli, as they evoked longer responses compared to flashes. 
+
+On average, tectal cells were selective for looming stimuli (within-brain mean $d$ of 0.67$\pm$0.50 and 0.46$\pm$0.47 in younger and older tadpoles respectively), and there was no difference between stages ($p_t=$ 0.3). The share of cells that responded to looming stimuli stronger than to flashes also did not change in development (84$\pm$23\%, 77$\pm$21\%; $p_t=$ 0.4). There was however a developmental change in the distribution of cell selectivity values within each brain: while the variance did not change ($p_t=$ 0.3), there was a change in skew ($p_t=$ 0.02), which was positive in younger animals, but negative in older ones, reflecting a decrease in number of top-selective cells within each brain (Fig. 2I). A more intuitive way to quantify this difference is by looking at the gap between top-selective (90th percentile) and median selective cells, which went down in older animals (0.75$\pm$0.26 in younger, but 0.53$\pm$0.27 in older tadpoles; $p_t=$ 0.03). Together, these results were unexpected: in collision avoidance tests stage 49 tadpoles perform better than stage 46 tadpoles \citep{dong2009}, and we expected them to develop a subset of looming-selective cells, as described in adult frogs \citep{nakagawa2010otneurons,baranauskas2012}, and other vertebrates \citep{wang1992pigeon,wu2005pigeon,liu2011cat}. Yet in our experiments selectivity for looming stimuli did not change, and a subpopulation of strongly selective cells not only did not emerge in older animals, but became less prominent.
 
 We then considered the second, more computationally demanding definition of selectivity: a preference for spatially organized looming stimuli over scrambled stimuli. On average, tectal cells did not respond stronger to either of these stimuli (average selectivity of $-$0.07$\pm$0.33 in younger tadpoles, $-$0.04$\pm$0.49 in older ones), and the value of average selectivity did not change in development ($p_t=$ 0.9). The share of cells that responded to looming stronger than to scrambled was at a chance level for both developmental stages (46$\pm$31\%, 48$\pm$37\%, $p_t=$ 0.9), and there was no change in either within-brain variance of this selectivity ($p_t=$ 0.9), or the 90$-$50 percentile asymmetry of values ($p_t=$ 0.8).
 
