Tectum size refs; minor typos

--- a/main.tex
+++ b/main.tex
@@ -170,7 +170,7 @@ To reconstruct network connectivity, we calculated transfer entropy \citep{goure
 In our experiments, all tectal neurons received shared inputs from the eye, which recruited them in similar response sequences in each trial. This complicated connectivity inference, as neurons could spike in a sequence both because they were connected, and because they received innervation from sequentially activated areas of the retina. To compensate for these shared inputs, we randomly reshuffled trials for every neuron, calculated average transfer entropy on reshuffled data, and subtracted it from the transfer entropy on trial-matched data \citep{gourevitch2007te,wollstadt2014te}. In essence, instead of analyzing raw responses, we analyzed small deviations from the average response, and quantified whether these deviations tended to propagate through the network, from one neuron to another. The reshuffling step also allowed us to calculate a $p$-value for each pair of neurons, and quantify how unusual the actually observed value of transfer entropy was for this pair of neurons, compared to a value arising from shared inputs, but no causal connections.
 
 \begin{figure*}[t]
-\includegraphics[width=0.5\linewidth]{fig4.png}
+\includegraphics[width=0.6\linewidth]{fig4.png}
 \caption{
 Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
@@ -203,13 +203,13 @@ Even though the architecture of collision-detecting tectal networks is unknown, 
 
 Looking at the \textbf{number of incoming connections} (weighted in-degree), we found that in stage 46 tadpoles it did not correlate with selectivity ($r=$ 0.08$\pm$0.24, $p_{t1}=$ 0.2; individual $r>$0 in 9/14 experiments), but in stage 49 tadpoles the correlation was significant, even if small ($r=$ 0.07$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments), indicating that in older tadpoles selective cells received slightly more incoming connections, compared to non-selective cells.
 
-As a slightly more advanced way to quantify information sinks, we calculated \textbf{Katz centrality} measure for each neuron \citep{katz1953original,fletcher2018katz}. Nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph is more likely to eventually excite one of these nodes, compared to a node with a low centrality value. We found that graphs from younger tadpoles showed no correlation between Katz centrality and looming selectivity ($r =$ 0.08$\pm$0.25, $p_{t1} =$ 0.25, individual $r>$0 in 8/14 experiments), but in older tadpoles Katz centrality correlated with selectivity ($r=$ 0.08$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments).
+As a better way to quantify information sinks, we calculated \textbf{Katz centrality} measure for each cell in the connectivity graph \citep{katz1953original,fletcher2018katz}. Nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph would be more likely to eventually cause activation of these nodes, compared to a node with a low centrality value. We found that graphs from younger tadpoles showed no correlation between Katz centrality and looming selectivity ($r =$ 0.08$\pm$0.25, $p_{t1} =$ 0.25, individual $r>$0 in 8/14 experiments), but in older tadpoles Katz centrality correlated with selectivity ($r=$ 0.08$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments).
 
 As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether cell selectivity for looming stimuli correlated with its \textbf{average activity} during the recording. We found that for both younger and older animals, actively spiking cells tended to have stronger looming selectivity ($r =$ 0.20$\pm$0.24 and 0.14$\pm$0.19 respectively; in both cases $r$ is significantly $>0$, $p_{t1}=$ 0.01 and 0.01). There was no change in this correlation over development ($p_t=$ 0.4).
 
-If looming-selective cells are gathering information from the network, it was also plausible to hypothesize that they would be more likely to be connected to each other, rather than to non-selective cells. To test this, we used the weighted \textbf{assortativity of selectivity} values: a correlation between selectivity scores of every pair of cells connected by an edge, with strength of this edge factored in this calculation as a weight (see Methods). We found that selectivity of connected cells did not correlate in graphs reconstructed from younger tadpoles ($r$=0.05$\pm$0.12, $p_{t1}$=0.14, individual $r>$0 in 9/14 experiments), but correlated in graphs reconstructed from older tadpoles ($r$=0.05$\pm$0.07, $p_{tq}$=0.01; individual $r>$0 in 11/16 experiments). Together, these results suggest that the distribution of selective cells in developed networks became less random, which may indicated a higher role of distributed network calculations in older animals.
+If looming-selective cells are gathering information from the network, it was plausible to expect that selective would be more likely to be connected to each other, rather than to non-selective cells. To test this, we used the weighted \textbf{assortativity of selectivity} values: a correlation between selectivity scores of every pair of cells connected by an edge, with strength of this edge factored in this calculation as a weight (see Methods). We found that selectivity of cells connected by an edge did not correlate in graphs reconstructed from younger tadpoles ($r$=0.05$\pm$0.12, $p_{t1}$=0.14, individual $r>$0 in 9/14 experiments), but weakly correlated in graphs reconstructed from older tadpoles ($r$=0.05$\pm$0.07, $p_{tq}$=0.01; individual $r>$0 in 11/16 experiments). Together, these results suggest that the distribution of selective cells in developed networks became less random, which may indicated a higher role of distributed network calculations in older animals.
 
-We also hypothesized that on average selectivity for looming stimuli may gradually “accumulate” as the signal propagates through the network, and so “downstream” cells on the receiving end of a strong edge within the graph would, on average, be more selective than “upstream” cells. This hypothesis proved to be wrong in both younger and older tadpoles: across all experiments, 52$\pm$7\% of strong edges (top 25\% of $w_{ji}$ values) led from cells with less to more selective cells, which is not different from chance rate ($p_{t1}$=0.1 for analysis across experiments, $n$=30). A weighted average increase in selectivity between two cells connected by an edge was 0.02$\pm$0.07 ($p_{t1}$=0.2, $n$=30), and there was no change in this value in development ($p_t$=0.2, $n$=14, 16).
+We also hypothesized that selectivity for looming stimuli may gradually “accumulate” as the signal propagates through the network, and so “downstream” cells on the receiving end of a strong edge within a graph would, on average, be more selective than “upstream” cells. This hypothesis proved to be wrong in both younger and older tadpoles: across all experiments, 52$\pm$7\% of strong edges (top 25\% of $w_{ji}$ values) led from cells with less to more selective cells, which is not different from chance rate ($p_{t1}$=0.1 for analysis across experiments, $n$=30). A weighted average increase in selectivity between two cells connected by an edge was 0.02$\pm$0.07 ($p_{t1}$=0.2, $n$=30), and there was no change in this value in development ($p_t$=0.2, $n$=14, 16).
 
 \subsection*{Developmental Model}
 
@@ -278,7 +278,7 @@ The sensitivity analysis showed that of all modeling assumptions, the presence o
 
 At the same time, to arrange a subset of tectal outputs in a reliable looming detector, a developing brain would need access to both “training” looming stimuli, and a learning signal. We assume that in tadpoles, this learning signal may come from both dimming receptors in the retina \citep{baranauskas2012}, and lateral line receptors in the body \citep{truszkowski2017}. These inputs may trigger plasticity in connections from the tectum to the hindbrain reticulospinal neurons, selecting a subset of inputs that are most active immediately before a collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each collision, allowing a tadpole to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons. Therefore, this type of training could lead to the development of spatially nuanced escape responses that use context to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
 
-A relatively poor fit between network predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as the tectum is about 40 cells across [XXX], and packed 6-10 cells deep in its thickest part [XXX], while tapering towards the edges [XXX]. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
+A relatively poor fit between network predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
 
 The best way to address these concerns would be to run a set of control experiment, analyzing transfer entropy between pairs of cells known to be either connected or not, to estimate the actual power of graph reconstruction under these conditions. One possible approach could be to combine Ca imaging recordings with paired whole-cell recordings, probing connections by brief depolarization of one cell and recording of synaptic currents in the other. Unfortunately, this type of experiments was beyond our technical ability, so we had to rely on indirect signs of successful network reconstruction. Two most important observations that support our results, are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were assured by the replication of tectal response shapes (compared to \citep{khakhalin2014}, the internal replication of edge detection between stimuli types (see Methods), and observation of retinotopy during responses to looming stimuli. We therefore conclude that selective staining of neurons in a living brain, followed by high-speed ($\sim$100 frames/s) calcium imaging, allows reconstruction of directed local network connectivity.
 
@@ -370,7 +370,7 @@ Here $d^{out}_i$ and $d^{in}_j$ are weighted out- and in-degrees for nodes $i$ a
 
 \textbf{Network reconstruction}. For network reconstruction, we used a modified Transfer Entropy (TE) calculation, adapted from \citep{stetter2012te,gourevitch2007te}. Mathematically, fast Ca imaging recordings, as used in this study, provides a middle ground between commonly used, slower Ca imaging data and multielectrode recordings. In most Ca imaging recordings, the frame acquisition time (100 ms) is an order of magnitude longer than the transmission time between neurons ( 2 ms), which biases analysis towards co-activation analysis. In our data, the high rate of acquisition (12 ms per frame) was very close to typical cell-to-cell activation transmission time in the tectum, so we restricted our analysis to interactions between the activity of each cell at a frame i and their activity at the next frame i+1, ignoring both longer (multiframe), and same-frame interactions.
 
-For each cell, we took its inferred activity train, and binned it at 3 levels, classifying every frame as either a frame with high, medium, or low activity. For each cell, we used 1/3 and 2/3 quantiles of its inferred activity train values as levels thresholds, so that all three types of frames were equally frequent, as this optimized the entropy of representation, while retaining low binning count. Then for each pair of neurons $i$ and $j$ we calculated the probability $P(k_j^1,k_j^0,k_i^0)$, which showed the conditional probability of neuron $j$ being in state $k_j^1$ (either 1, 2, or 3) at moment $t$, if this neuron was in a state $k_j^0$ at the previous frame $t-1$, and  input neuron $i$ was in state $k_i^0$ at the same frame $t-1$. From this set of probabilities, we calculated conditional probabilities of $P(k_j^1 \mid k_j^0)$, and finally calculated the total transfer entropy as
+For each cell, we took its inferred activity train, and binned it at 3 levels, classifying every frame as either a frame with high, medium, or low activity. For each cell, we used 1/3 and 2/3 quantiles of its inferred activity train values as levels thresholds, so that all three types of frames were equally frequent, as this maximized information, while retaining low binning count. Then for each pair of neurons $i$ and $j$ we calculated the probability $P(k_j^1,k_j^0,k_i^0)$, which showed the conditional probability of neuron $j$ being in state $k_j^1$ (either 1, 2, or 3) at moment $t$, if this neuron was in a state $k_j^0$ at the previous frame $t-1$, and  input neuron $i$ was in state $k_i^0$ at the same frame $t-1$. From this set of probabilities, we calculated conditional probabilities of $P(k_j^1 \mid k_j^0)$, and finally calculated the total transfer entropy as
 
 \[ T_{ij} = \sum_{lmn=1}^3{P(k_j^1=l,k_j^0=m,k_i^0=n)}\cdot \log\left(\frac{P(k_j^1=l , \mid , k_j^0=m, , k_i^0=n)}{P(k_j^1=l , \mid , k_j^0=m)}\right) \]
 
