--- a/refs.bib
+++ b/refs.bib
@@ -79,6 +79,39 @@
   publisher={Elsevier}
 }
 
+@article{haas2001electroporation,
+  title={Single-cell electroporationfor gene transfer in vivo},
+  author={Haas, Kurt and Sin, Wun-Chey and Javaherian, Ashkan and Li, Zheng and Cline, Hollis T},
+  journal={Neuron},
+  volume={29},
+  number={3},
+  pages={583--591},
+  year={2001},
+  publisher={Elsevier}
+}
+
+@article{hewapathirane2008vivo,
+  title={In vivo imaging of seizure activity in a novel developmental seizure model},
+  author={Hewapathirane, D Sesath and Dunfield, Derek and Yen, Wesley and Chen, Simon and Haas, Kurt},
+  journal={Experimental neurology},
+  volume={211},
+  number={2},
+  pages={480--488},
+  year={2008},
+  publisher={Elsevier}
+}
+
+@article{hiramoto2009,
+  title={Convergence of multisensory inputs in Xenopus tadpole tectum},
+  author={Hiramoto, Masaki and Cline, Hollis T},
+  journal={Developmental neurobiology},
+  volume={69},
+  number={14},
+  pages={959--971},
+  year={2009},
+  publisher={Wiley Online Library}
+}
+
 @article{huberman2008waves,
   title={Mechanisms underlying development of visual maps and receptive fields},
   author={Huberman, Andrew D and Feller, Marla B and Chapman, Barbara},
@@ -343,17 +376,6 @@
   pages={520},
   year={2014},
   publisher={Nature Publishing Group}
-}
-
-@article{hiramoto2009,
-  title={Convergence of multisensory inputs in Xenopus tadpole tectum},
-  author={Hiramoto, Masaki and Cline, Hollis T},
-  journal={Developmental neurobiology},
-  volume={69},
-  number={14},
-  pages={959--971},
-  year={2009},
-  publisher={Wiley Online Library}
 }
 
 @article{liu2016jumbo,
