new ref on sensorimotor transformation + last paragraph of discussion

--- a/refs.bib
+++ b/refs.bib
@@ -90,6 +90,14 @@
   publisher={Elsevier}
 }
 
+@article{helmbrecht2018topography,
+  title={Topography of a Visuomotor Transformation},
+  author={Helmbrecht, Thomas O and dal Maschio, Marco and Donovan, Joseph C and Koutsouli, Styliani and Baier, Herwig},
+  journal={Neuron},
+  year={2018},
+  publisher={Elsevier}
+}
+
 @article{hewapathirane2008vivo,
   title={In vivo imaging of seizure activity in a novel developmental seizure model},
   author={Hewapathirane, D Sesath and Dunfield, Derek and Yen, Wesley and Chen, Simon and Haas, Kurt},
