--- a/main.tex
+++ b/main.tex
@@ -97,7 +97,7 @@ Few sensory stimuli are as conspicuous and ill boding as visual looming. A retin
 
 In different animals, looming detection seems to rely on a variety of networks and solutions \citep{frost2004review}, including dimming detectors in the retina \citep{ishikane2005,munch2009}, opponent motion detection \citep{klapoetke2017looming}, and competitive spike-frequency adaptation \citep{peron2009adaptation,fotowat2011multiplexing}. Even within a single clade of anuran amphibians (frogs), animals seem to employ several competing looming detection mechanisms, such as non-linear detection of retinal oscillations \citep{baranauskas2012}, and rebound of recurrent activity \citep{jang2016}. Moreover, it seems that at least some of these competing mechanisms may lead to different subtypes of avoidance responses, as it was described in insects \citep{card2008tradeoffs,chan2013avoidance}, fish \citep{burgess2007twoescapes,portugues2009behaviors,budick2000repertoire,temizer2015pathway,bhattacharyya2017assessment}, and tadpoles \citep{khakhalin2014}.
 
-While this co-existence of multiple alternative solutions for looming detection may seem overwhelming, it actually matches the recent insight from the field of machine learning. Simple, crude ways of detecting important features of sensory stimuli are critical for training more sophisticated and efficient networks, that are then used for more nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. In case of looming stimuli in tadpoles, early in development, when the collision detection is still weak \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina \citep{baranauskas2012} both to detect collisions, and to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, these motion-dependent networks can serve as a first line of defense, identifying early phases of looming, and providing information to motor neurons in the hindbrain to perform nuanced course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors could remain as a backup, mediating more urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, these sensorimotor networks can be further refined, relying on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016}.
+While this co-existence of multiple alternative solutions for looming detection may seem overwhelming, it actually matches the recent insight from the field of machine learning. Simple, crude ways of detecting important features of sensory stimuli are critical for training more sophisticated and efficient networks, that are then used for more nuanced analysis of the sensory world at later stages of development \citep{marblestone2016deeplearning}. In case of looming stimuli in tadpoles, early in development, when the collision detection is still weak \citep{dong2009}, animals may use “hardwired” dimming receptors in the retina \citep{baranauskas2012} both to detect collisions, and to “bootstrap” more sophisticated motion-dependent networks in the tectum. Later, these motion-dependent networks can serve as a first line of defense, identifying early phases of looming, and providing information to motor neurons in the hindbrain to perform nuanced course correction \citep{khakhalin2014,bhattacharyya2017assessment}, while dimming detectors could remain as a backup, mediating more urgent and less coordinated responses \citep{khakhalin2014}. Moreover, every time collision avoidance is not performed perfectly, these sensorimotor networks can be further refined, relying on inputs from the lateral line and mechanosensory detectors in the skin \citep{felch2016, helmbrecht2018topography}.
 
 Traditionally, the golden standard for describing a mechanism of a behavior was to demonstrate that activation of a certain structure is both sufficient and required for this behavior \citep{krakauer2017reductionist}. This reductionist approach works well in some systems, such acoustic startle detectors \citep{korn2005mauthner}, or central pattern generators in the spinal cord \citep{roberts2010hatchling}, that are compact and isolated enough. Yet most systems in the brain act as complex, interconnected, distributed dynamical systems, which makes it hard to represent them as a sum of “parts”, with distinct functions ascribed to each of these parts \citep{gao2015simplicity}. It is possible to study these complex systems statistically, identifying properties that hold “on average”, and differ in functional and dysfunctional networks, but a statistical approach typically does not grant true insight into the “meaning” of these properties \citep{bassett2018models}. For example, knowing that a disordered brain does not adhere to the same network statistics as a normal brain would not necessarily tell us how to “fix” it, even if we had a method to rewire individual neurons in a targeted fashion.
 
@@ -199,7 +199,7 @@ The property of \textbf{hierarchical flow} is a derivative measure \citep{mones2
 
 \subsection*{Selectivity Mechanisms}
 
-Even though the architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that these neurons may be non-randomly located within the detected connectivity graph: for example, receive more feed-forward connections, compared to non-selective cells \citep{litwin2014assemblies}. To investigate this question, for each reconstructed network, we calculated correlation coefficients between looming selectivity of each neuron and values that quantified its positioning within the graph, known as measures of \textbf{centrality}.
+Even though the architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that the position of these neurons within detected connectivity graphs may be non-random: for example, they may receive more feed-forward connections, compared to non-selective cells \citep{litwin2014assemblies}. To investigate this question, for each reconstructed network we tested correlations between looming selectivity of each neuron and values that quantified its place within the graph, known as measures of \textbf{centrality}.
 
 Looking at the \textbf{number of incoming connections} (weighted in-degree), we found that in stage 46 tadpoles it did not correlate with selectivity ($r=$ 0.08$\pm$0.24, $p_{t1}=$ 0.2; individual $r>$0 in 9/14 experiments), but in stage 49 tadpoles the correlation was significant, even if small ($r=$ 0.07$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments), indicating that in older tadpoles selective cells received slightly more incoming connections, compared to non-selective cells.
 
@@ -207,7 +207,7 @@ As a better way to quantify information sinks, we calculated \textbf{Katz centra
 
 As cells with higher Katz centrality tend to be activated more often \citep{fletcher2018katz}, we checked whether cell selectivity for looming stimuli correlated with its \textbf{average activity} during the recording. We found that for both younger and older animals, actively spiking cells tended to have stronger looming selectivity ($r =$ 0.20$\pm$0.24 and 0.14$\pm$0.19 respectively; in both cases $r$ is significantly $>0$, $p_{t1}=$ 0.01 and 0.01). There was no change in this correlation over development ($p_t=$ 0.4).
 
-If looming-selective cells are gathering information from the network, it was plausible to expect that selective would be more likely to be connected to each other, rather than to non-selective cells. To test this, we used the weighted \textbf{assortativity of selectivity} values: a correlation between selectivity scores of every pair of cells connected by an edge, with strength of this edge factored in this calculation as a weight (see Methods). We found that selectivity of cells connected by an edge did not correlate in graphs reconstructed from younger tadpoles ($r$=0.05$\pm$0.12, $p_{t1}$=0.14, individual $r>$0 in 9/14 experiments), but weakly correlated in graphs reconstructed from older tadpoles ($r$=0.05$\pm$0.07, $p_{tq}$=0.01; individual $r>$0 in 11/16 experiments). Together, these results suggest that the distribution of selective cells in developed networks became less random, which may indicated a higher role of distributed network calculations in older animals.
+If looming-selective cells are gathering information from the network, it was plausible to expect that they would more likely to be connected to other selective cells, rather than to non-selective ones. To test this, we looked into the weighted \textbf{assortativity of selectivity} value: a weighted correlation between the selectivity scores of cells connected by edges, with strength of these edges used as weight (see Methods). We found that selectivities of connected cells did not correlate in graphs reconstructed from younger tadpoles ($r$=0.05$\pm$0.12, $p_{t1}$=0.14, individual $r>$0 in 9/14 experiments), but weakly correlated in older tadpoles ($r$=0.05$\pm$0.07, $p_{tq}$=0.01; individual $r>$0 in 11/16 experiments). Together with centrality results, it suggests that the distribution of selective cells in older networks was less random, which may indicated a higher role of distributed calculations in older animals.
 
 We also hypothesized that selectivity for looming stimuli may gradually “accumulate” as the signal propagates through the network, and so “downstream” cells on the receiving end of a strong edge within a graph would, on average, be more selective than “upstream” cells. This hypothesis proved to be wrong in both younger and older tadpoles: across all experiments, 52$\pm$7\% of strong edges (top 25\% of $w_{ji}$ values) led from cells with less to more selective cells, which is not different from chance rate ($p_{t1}$=0.1 for analysis across experiments, $n$=30). A weighted average increase in selectivity between two cells connected by an edge was 0.02$\pm$0.07 ($p_{t1}$=0.2, $n$=30), and there was no change in this value in development ($p_t$=0.2, $n$=14, 16).
 
@@ -219,7 +219,7 @@ We also hypothesized that selectivity for looming stimuli may gradually “accum
 Spatial variability. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \textbf{F}. }
 \end{figure*}
 
-As the networks we studied are complex and noisy, it was hard to provide a clear mechanistic interpretation of our results, especially as in some cases when we used alternative ways to quantify the same intuition, we found the evidence conflicting. For example, for statistical network properties, the effects of non-random degree distribution and mesoscale graph structure often affected network properties in opposite directions (Fig), leading to small total effects. Similarly, when we tried to quantify how “integrative” was the position of each cell within the connectivity graph, only some of these measurements correlated with cell selectivity for looming stimuli, and it was not clear which of these measurements are objectively “better”, in terms of reflecting the true properties of the network.
+As the networks we studied are complex and noisy, it was hard to provide a clear mechanistic interpretation of our results, especially as in some cases we used alternative ways to quantify the same intuition, and found the evidence conflicting. For example, for statistical network properties, the effects of non-random degree distribution and mesoscale graph structure often affected network properties in opposite directions (Fig. XXX), leading to small total effects. Similarly, when we tried to quantify how “integrative” was the position of each cell within the connectivity graph, only some of these measurements correlated with cell selectivity for looming stimuli, and it was not clear which of these measurements are objectively “better”, in terms of reflecting the true properties of the network.
 
 To compensate for these limitations, and to provide a theoretical counterpoint to our observations, we built a mathematical model of the developing tectum, and ran this model through the same set of measurements that we applied to our experiments. The model consisted of 81 artificial neurons, arranged in a 9 by 9 grid, that were originally all connected to each other (every neuron to every neuron) with random positive (excitatory) synaptic weights (Fig). The model operated in 10 ms increments, and we interpreted the output of each neuron as its instantaneous firing rate. At each time frame we looked at the activity of the network in the previous frame, and summed up the inputs each neuron would receive from each other neuron. We then used a sliding logistic function to translate these synaptic inputs into postsynaptic spiking (see “Methods” for details).
 
@@ -235,7 +235,7 @@ Model results. \textbf{A}. \textbf{B}. \textbf{C}. \textbf{D}. \textbf{E}. \text
 
 The summary of modeling results is shown in Fig. 7. In development, the network became selective for looming stimuli, both in terms of the total response (by the end of development, responding to looming 99$\pm$9\% stronger than to flash) and mean selectivity (mean Cohen $d$ of responses = 1.09$\pm$0.10). The share of cells selective for looming stimuli also increased, and then saturated at $\sim$98\% level, as did the selectivity of the top 10\% of most selective cells.
 
-To test whether in our model the nature of visual stimuli could be reconstructed from network activation (stimulus encoding), we used a logistic regression on a vector of total cell responses, as it was done for biological data. We then used a different dataset, consisting of equal shares of looming and non-looming stimuli, to assess the accuracy of our model. The prediction power increased in development, and plateaued at the accuracy level of $\sim$95\%. This suggests that a retinotopic STDP-driven network can achieve highly reliable looming detection if it is equipped with an output layer, potentially representing motor neurons in the hindbrain, and the weights of connections to the output layer are set correctly, e.g. via reinforcement learning.
+To test whether in our model the nature of visual stimuli could be reconstructed from network activation (stimulus encoding), we used a logistic regression on a vector of total cell responses, as it was done for biological data. We then used a different dataset, consisting of equal shares of looming and non-looming stimuli, to assess the accuracy of our model. The prediction power increased in development, and plateaued at the accuracy level of $\sim$95\%. This suggests that a retinotopic STDP-driven network can achieve highly reliable looming detection if it is equipped with an output layer, potentially representing motor neurons in the hindbrain \citep{helmbrecht2018topography}, and the weights of connections to the output layer are set correctly, e.g. via reinforcement learning.
 
 Unlike in biological experiments, the model was selective for looming stimuli over scrambled stimuli at the full network level, and by the end of the training period, responses to looming stimulus were 43$\pm$7\% stronger than to scrambled. Mean selectivity of individual cells, defined as a Cohen $d$ for responses to looming compared to scramble, was 0.48$\pm$0.07, and 84\% of cells were selective for looming stimuli, which is also different from what we observed in biological experiments. The selectivity for looming over flash correlated with selectivity for scrambled stimuli over flash on a cell by cell basis ($r$= 0.17$\pm$0.10). A subset of highly selective cells did not emerge in the model, as the difference between 90th and 50th percentiles of selectivity were rather low ($\sim$ 0.9 ; Fig XXX).
 
@@ -268,19 +268,21 @@ Disruption of different developmental rules led to very different changes in net
 
 \section*{Discussion}
 
-In this study, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously develop a non-random network structure, and 2) acquire selectivity for looming stimuli. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for our hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly trivial results were not verified in biological experiments, as we observed no improvement in looming detection in development, as neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
+In this study, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously develop a non-random network structure, and 2) acquire selectivity for looming stimuli. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for our hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly robust results were not verified in biological experiments, as we observed no improvement in looming detection in development, as neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
+
+% Rewrite this piece here, comparing not just changes to the real stuff, but also the reshuffling-non-randonmess. Like, tie it closer together.
 
 The model also developed a non-random structure, with several key network properties (efficiency, modularity, clustering, and hierarchy) becoming significantly different from matching values in a randomized network. Most of these properties also changed with model development, yet except for changes in degree distribution and modularity, we did not detect similar network differences between younger and older tadpoles. This may suggest that while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and continue to refine retinal inputs to the tectum \citep{tao2005refinement,munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In the model, most network measures plateaued, or even slowly reversed in late development, which means that even for a qualitative comparison between the model and the experiment we have to make an important assumption about whether stage 46 tadpoles correspond to a mid-point of development, or whether they fall on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages fall on the “plateau”. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor connections from the tectum to the hindbrain, which we did not assess in this study.
 
-The changes in degree distribution, observed both in the model and in imaging experiments, were largely a consequence of synaptic competition that explicitly promoted connectivity in underconnected neurons, while "punishing" overconnected cells, creating more light-frame, openwork graph structures \citep{fiete2010chains}. The change in modularity observed in our network supports results previously described in networks governed by Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}, and different implementations of STDP \citep{stam2010modular,litwin2014assemblies}. We did not observe changes in the number of neuronal ensembles, but we believe that it is only because our experiments were not well suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous,pietri2017emergence}.
+Our data suggests that the changes in degree distribution, that were observed both in the model and in imaging experiments, are largely a consequence of synaptic competition. It explicitly promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created more light-frame, openwork graph structures \citep{fiete2010chains}. The change in modularity observed in our network supports results previously described in networks governed by Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}, and different implementations of STDP \citep{stam2010modular,litwin2014assemblies}. We did not observe changes in the number of neuronal ensembles \citep{avitan2017spontaneous,pietri2017emergence}, but we believe that it is only because our experiments were not well suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them.
 
-The sensitivity analysis showed that of all modeling assumptions, the presence of patterned visual stimulation was the most important. The model converged to a state suitable for looming detection even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if sensory inputs were kept random. Moreover, it was not critical for the model to be trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, which means that it is stimulus locality and edge continuity that mattered for the development. This also suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Note that our model predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but contradicts some experiemntal observations from zebrafish \citep{pietri2017emergence}.
+The sensitivity analysis showed that of all modeling assumptions, the presence of patterned visual stimulation was most important. The model converged to a state suitable for looming detection even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if sensory inputs were kept random. Moreover, it was not critical for the model to be trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, which means that it is stimulus locality and edge continuity that mattered for the development. This also suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Note that our model predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but seems to contradict some experiemntal observations from zebrafish \citep{pietri2017emergence}.
 
-At the same time, to arrange a subset of tectal outputs in a reliable looming detector, a developing brain would need access to both “training” looming stimuli, and a learning signal. We assume that in tadpoles, this learning signal may come from both dimming receptors in the retina \citep{baranauskas2012}, and lateral line receptors in the body \citep{truszkowski2017}. These inputs may trigger plasticity in connections from the tectum to the hindbrain reticulospinal neurons, selecting a subset of inputs that are most active immediately before a collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each collision, allowing a tadpole to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons. Therefore, this type of training could lead to the development of spatially nuanced escape responses that use context to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
+At the same time, to arrange a subset of tectal outputs in a reliable looming detector, a developing brain would need access to both “training” looming stimuli, and a learning signal. We assume that in small aquatic vertebrates, this learning signal may come from both dimming receptors in the retina \citep{baranauskas2012}, and lateral line receptors in the body \citep{truszkowski2017}. These inputs may trigger plasticity in connections from the tectum to the hindbrain reticulospinal neurons, selecting a subset of inputs that are most active immediately before a collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each collision, allowing the animal to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{helmbrecht2018topography}. Therefore, this type of training could lead to the development of spatially nuanced escape responses to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
 
-A relatively poor fit between network predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
+A relatively poor fit between network predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for two developmental stages respectively, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests. The best way to address these concerns would be to run a set of control experiment, analyzing transfer entropy between pairs of cells known to be either connected or not, to estimate the actual power of graph reconstruction under these conditions. One possible approach could be to combine Ca imaging recordings with paired whole-cell recordings, probing connections by brief depolarization of one cell and recording of synaptic currents in the other. Unfortunately, this type of experiments was beyond our technical ability, so we had to rely on indirect signs of successful network reconstruction. Two most important observations that support our results, are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were assured by the replication of tectal response shapes (compared to \citep{khakhalin2014}, the internal replication of edge detection between stimuli types (see Methods), and observation of retinotopy during responses to looming stimuli. We therefore conclude that selective staining of neurons in a living brain, followed by high-speed ($\sim$100 frames/s) calcium imaging, allows reconstruction of directed local network connectivity.
 
-The best way to address these concerns would be to run a set of control experiment, analyzing transfer entropy between pairs of cells known to be either connected or not, to estimate the actual power of graph reconstruction under these conditions. One possible approach could be to combine Ca imaging recordings with paired whole-cell recordings, probing connections by brief depolarization of one cell and recording of synaptic currents in the other. Unfortunately, this type of experiments was beyond our technical ability, so we had to rely on indirect signs of successful network reconstruction. Two most important observations that support our results, are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were assured by the replication of tectal response shapes (compared to \citep{khakhalin2014}, the internal replication of edge detection between stimuli types (see Methods), and observation of retinotopy during responses to looming stimuli. We therefore conclude that selective staining of neurons in a living brain, followed by high-speed ($\sim$100 frames/s) calcium imaging, allows reconstruction of directed local network connectivity.
+To sum up, we show that a combination of simple developmental rules with structured sensory inputs can quickly shape a highly structured retinotopic network that is able to support collision detection. Moreover, our results tentatively suggest that collision detection in small aquatic animals may be based on resonant subnetworks of spatially organized synfire chains that integrate spatiotemporal information about stimulus position, speed, and size change, transforming it into an appropriate motor response. We hypothesize that this sensorimotor transformation may develop through a form of reinforcement learning in the hindbrain, and hope to explicitly test this hypothesis in the future, both experimentally, and through computational modeling.
 
 \section*{Methods}
 
