+ ref on non-random degrees of selective cells

--- a/main.tex
+++ b/main.tex
@@ -199,9 +199,11 @@ The property of \textbf{hierarchical flow} is a derivative measure \citep{mones2
 
 \subsection*{Selectivity Mechanisms}
 
-Even though the architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that the position of these neurons within detected connectivity graphs may be non-random: for example, they may receive more feed-forward connections, compared to non-selective cells \citep{litwin2014assemblies}. To investigate this question, for each reconstructed network we tested correlations between looming selectivity of each neuron and values that quantified its place within the graph, known as measures of \textbf{centrality}.
+Even though the architecture of collision-detecting tectal networks is unknown, it is safe to assume that looming-selective neurons integrate streams of information from different parts of the visual field. We therefore hypothesized that the position of these neurons within detected connectivity graphs may be non-random \citep{timme2016degree}: for example, they may receive more feed-forward connections, compared to non-selective cells \citep{litwin2014assemblies}. To investigate this question, for each reconstructed network we tested correlations between looming selectivity of each neuron and values that quantified its place within the graph, known as measures of \textbf{centrality}.
 
 Looking at the \textbf{number of incoming connections} (weighted in-degree), we found that in stage 46 tadpoles it did not correlate with selectivity ($r=$ 0.08$\pm$0.24, $p_{t1}=$ 0.2; individual $r>$0 in 9/14 experiments), but in stage 49 tadpoles the correlation was significant, even if small ($r=$ 0.07$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments), indicating that in older tadpoles selective cells received slightly more incoming connections, compared to non-selective cells.
+
+% Add back that they didn't get more projections out, in contradiction with [timme2016degree], which is probably because they would be projecting out of the network, and not in?
 
 As a better way to quantify information sinks, we calculated \textbf{Katz centrality} measure for each cell in the connectivity graph \citep{katz1953original,fletcher2018katz}. Nodes with high Katz centrality have many paths leading to them, so a spike originating at random within a graph would be more likely to eventually cause activation of these nodes, compared to a node with a low centrality value. We found that graphs from younger tadpoles showed no correlation between Katz centrality and looming selectivity ($r =$ 0.08$\pm$0.25, $p_{t1} =$ 0.25, individual $r>$0 in 8/14 experiments), but in older tadpoles Katz centrality correlated with selectivity ($r=$ 0.08$\pm$0.13, $p_{t1}=$ 0.03; individual $r>$0 in 12/16 experiments).
 
