--- a/refs.bib
+++ b/refs.bib
@@ -244,6 +244,17 @@
   publisher={Elsevier}
 }
 
+@article{timme2016degree,
+  title={High-degree neurons feed cortical computations},
+  author={Timme, Nicholas M and Ito, Shinya and Myroshnychenko, Maxym and Nigam, Sunny and Shimono, Masanori and Yeh, Fang-Chin and Hottowy, Pawel and Litke, Alan M and Beggs, John M},
+  journal={PLoS computational biology},
+  volume={12},
+  number={5},
+  pages={e1004858},
+  year={2016},
+  publisher={Public Library of Science}
+}
+
 @article{xu2011,
   title={Visual experience-dependent maturation of correlated neuronal activity patterns in a developing visual system},
   author={Xu, Heng and Khakhalin, Arseny S and Nurmikko, Arto V and Aizenman, Carlos D},
