--- a/main.tex
+++ b/main.tex
@@ -55,7 +55,7 @@
 % Headers and footers
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\rhead{Khakhalin AS. Graph analysis of collision detection networks. (EARLY DRAFT) Page \thepage}
+\rhead{Khakhalin AS. Graph analysis of collision detection networks. (DRAFT) Page \thepage}
 \cfoot{} % To kill footer page numbers
 
 \begin{document} % --------------------- Document start ----------------
@@ -71,7 +71,7 @@
 %\twocolumn[
 \begin{flushleft}
 {\Large
-\textbf\newline{Graph analysis of collision detection networks in the tectum, and its replication in a simple computational model (EARLY DRAFT)}
+\textbf\newline{Graph analysis of collision detection networks in the tectum, and its replication in a simple computational model (DRAFT)}
 }
 \newline
 % authors go here:
@@ -84,6 +84,7 @@ Arseny S. Khakhalin\textsuperscript{1,*}
 * Correspondence: khakhalin@bard.edu
 
 \section*{Abstract}
+% 224 words now; should be 200
 Looming is one of the most salient visual stimuli an animal may encounter, yet mechanisms of looming detection in vertebrates are poorly understood. For many animals, key computations involved in looming detection and collision avoidance seem to be performed by distributed networks, making it hard to tease out the underlying mechanisms. In this study, we contrast a computational developmental model of the optic tectum with the analysis of directed connectivity graphs, reconstructed from high-speed calcium imaging recording in \textit{Xenopus} tadpoles. We report a difference in degree distributions and modularity of tectal networks reconstructed from younger and older tadpoles. We also describe that looming-selective cells in the tectum tended to receive more inputs, and had higher Katz centrality than non-selective cells. We compare these results to predictions from a model governed by spike-time-dependent plasticity, homeostatic intrinsic plasticity, synaptic competition, and driven by structured visual inputs. We show that under general conditions, the model network developed robust looming selectivity, and replicated some network changes observed in imaging experiments, including changes in modularity and degree distribution. Other changes predicted by the model (hierarchy, efficiency, and spatial distribution of selective cells) were however not observed in imaging experiments. Finally, by comparing several reduced models, we predict which developmental rules could be most critical for the development of looming selectivity in the brain.
 %TC:ignore 
 \bigskip
